--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/ui": "^3.1.1",
     "nuxt": "^3.17.2",
+    "nuxt-particles": "^0.3.0",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
