--- a/front/package.json
+++ b/front/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/ui": "^3.1.1",
+    "@tresjs/core": "^5.1.0",
+    "@tresjs/nuxt": "^5.1.0",
     "nuxt": "^3.17.2",
     "nuxt-particles": "^0.3.0",
+    "three": "^0.180.0",
+    "three-globe": "^2.44.1",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/three": "^0.180.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5"
