--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/ui": "^3.1.1",
+    "@tresjs/cientos": "^5.1.0",
     "@tresjs/core": "^5.1.0",
     "@tresjs/nuxt": "^5.1.0",
     "nuxt": "^3.17.2",
